--- a/00-dados.tex
+++ b/00-dados.tex
@@ -16,6 +16,7 @@
 % data (ano com 4 dígitos)
 % orientador(a)
 % coorientador(a)(as)(es)
+% arquivo com dados bibliográficos
 % instituição
 % setor
 % programa de pós gradução
@@ -25,14 +26,11 @@
 % CDU
 % errata
 % assinaturas - termo de aprovação
-% epígrafe
-% resumos
-% palavras chave
-% abstract
-% keywords
+% resumos & palavras chave
 % agradecimentos
 % dedicatoria
-% arquivo com dados bibliográficos
+% epígrafe
+
 
 % Informações de dados para CAPA e FOLHA DE ROSTO
 %----------------------------------------------------------------------------- 
