--- a/UFPR.sty
+++ b/UFPR.sty
@@ -68,13 +68,13 @@
 
 % Fontes padroes de part, chapter, section, subsection e subsubsection
 %----------------------------------------------------------------------------- 
-\renewcommand{\ABNTEXchapterfont}{\normalfont}
+\renewcommand{\ABNTEXchapterfont}{\bfseries}
 \renewcommand{\ABNTEXchapterfontsize}{\normalsize}
 
 \renewcommand{\ABNTEXpartfont}{\ABNTEXchapterfont}
 \renewcommand{\ABNTEXpartfontsize}{\ABNTEXchapterfontsize}
 
-\renewcommand{\ABNTEXsectionfont}{\ABNTEXchapterfont}
+\renewcommand{\ABNTEXsectionfont}{\normalfont}
 \renewcommand{\ABNTEXsectionfontsize}{\normalsize}
 
 \renewcommand{\ABNTEXsubsectionfont}{\ABNTEXsectionfont}
