partes do documento estava com itens repetidos

--- a/00-dados.tex
+++ b/00-dados.tex
@@ -47,17 +47,14 @@
  \providecommand{\terTermoAprovacao}{Sim}
  \providecommand{\terDedicatoria}{Nao}
  \providecommand{\terFichaCatalografica}{Nao}
- \providecommand{\terErrata}{Sim}
  \providecommand{\terEpigrafe}{Nao}
  \providecommand{\terAgradecimentos}{Nao}
- \providecommand{\terDedicatoria}{Nao}
  \providecommand{\terErrata}{Nao}
  \providecommand{\terListaFiguras}{Sim}
  \providecommand{\terListaTabelas}{Sim}
  \providecommand{\terSiglasAbrev}{Nao}
  \providecommand{\terResumos}{Nao}
  \providecommand{\terSumario}{Sim}
- \providecommand{\terApendice}{Nao}
  \providecommand{\terAnexo}{Nao}
  \providecommand{\terApendice}{Nao}
  \providecommand{\terIndiceR}{Nao}
@@ -73,7 +70,11 @@
 %Prof Emílio Eiji Kavamura, MSc}
 \orientadora{
 Prof\textordfeminine~Grace Kelly, DSc}
+% Pode haver apenas uma orientadora ou um orientador
+% Se houver os dois prevalece o feminino.
 
+% Em termos de coorientação, podem haver até quatro neste modelo
+% Sendo 2 mulhere e 2 homens.
 % Coorientador ou Coorientadora
 \coorientador{}%Prof Morgan Freeman, DSc}
 \coorientadora{Prof\textordfeminine~Audrey Hepburn, DEng}
