alteração do autor no exemplo

--- a/00-dados.tex
+++ b/00-dados.tex
@@ -61,7 +61,7 @@
 %----------------------------------------------------------------------------- 
 
 \titulo{\textbf{Modelo de trabalho acadêmico com \abnTeX}}
-\autor{Rod Stewart}
+\autor{Bruna Stewart}
 \local{Curitiba}
 \data{2017} %Apenas ano 4 dígitos
 
