Termo de Aprovação
Condição estava errada

--- a/00-pretextual.tex
+++ b/00-pretextual.tex
@@ -25,7 +25,7 @@
 
 % Inserir folha de aprovação
 % ----------------------------------------------------------
-\ifthenelse{\equal{\terTermoAprovacao}{}}{
+\ifthenelse{\equal{\terTermoAprovacao}{Sim}}{
 \insereAprovacao}{}
 
 % Dedicatória
