\par antes de parindent na figura e figurac
O comando \par é antes da definição da indentação do parágrafo de notas e legenda.

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -504,10 +504,10 @@
         %\begin{flushleft}
             \par FONTE:~#4
             \ifthenelse{\equal{#6}{}}{}
-            {\hangindent=14mm \par NOTA: #6 }
+            { \par\hangindent=14mm NOTA: #6 }
             
             \ifthenelse{\equal{#7}{}}{}
-            {\hangindent=14mm \par LEGENDA: #7 }
+            { \par\hangindent=14mm LEGENDA: #7 }
         %\end{flushleft}
     \end{minipage}
     \end{figure}
@@ -531,10 +531,10 @@
         %\begin{flushleft}
             \par FONTE:~#4
             \ifthenelse{\equal{#6}{}}{}
-            {\hangindent=14mm \par NOTA: #6 }
+            {\par \hangindent=14mm NOTA: #6 }
           
             \ifthenelse{\equal{#7}{}}{}
-            {\hangindent=14mm \par LEGENDA: #9 }
+            {\par hangindent=14mm   LEGENDA: #9 }
         %\end{flushleft}
     \end{minipage}
     \end{figure}
