Capa retirado os negritos da capa e folha de rosto
\ABNTEXchapterfont comentados para Título, Autor e Instituição para que não fiquem em negrito

--- a/00-dados.tex
+++ b/00-dados.tex
@@ -42,7 +42,7 @@
 
 % Marcar Sim para as partes que irão compor o documento pdf
 %----------------------------------------------------------------------------- 
- \providecommand{\terCapa}{Não}
+ \providecommand{\terCapa}{Sim}
  \providecommand{\terFolhaRosto}{Sim}
  \providecommand{\terTermoAprovacao}{Sim}
  \providecommand{\terDedicatoria}{Nao}
@@ -60,7 +60,7 @@
  \providecommand{\terIndiceR}{Nao}
 %----------------------------------------------------------------------------- 
 
-\titulo{\textbf{Modelo de trabalho acadêmico com \abnTeX}}
+\titulo{Modelo de trabalho acadêmico com \abnTeX}
 \autor{Erika Angela Puertollano}
 \local{Curitiba}
 \data{2017} %Apenas ano 4 dígitos
