--- a/00-dados.tex
+++ b/00-dados.tex
@@ -61,7 +61,7 @@
 %----------------------------------------------------------------------------- 
 
 \titulo{Modelo de trabalho acadêmico com \abnTeX}
-\autor{Erika Angela Puertollano}
+\autor{Erika Angela}
 \local{Curitiba}
 \data{2017} %Apenas ano 4 dígitos
 
