relaxar comandos e repetir autores e títulos
relaxar o comando  biblabelsep : \let\biblabelsep\relax 
relaxar o comando  apud : \let\apud\relax
permitir repetições de autores e títulos: \usepackage[abnt-repeated-author-omit=no,  abnt-repeated-title-omit=no]{abntex2cite}

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -51,6 +51,8 @@
 % Pacotes de citações BibLaTeX
 % ----------------------------------------------------------
 \usepackage[style=abnt,backref=true,backend=biber,citecounter=true,backrefstyle=three]{biblatex}
+\let\biblabelsep\relax
+\let\apud\relax
 \usepackage[abnt-repeated-author-omit=no,  abnt-repeated-title-omit=no]{abntex2cite}
 
 \DefineBibliographyStrings{brazil}{%
