retirada dos negritos nos ambientes de descrição
acrescido o comando para reconfigurar o ambiente de descrições:

linha 91:  \setlist[description]{font=\normalfont\textbullet\space}

--- a/main.tex
+++ b/main.tex
@@ -88,6 +88,7 @@
 \renewcommand{\figureautorefname}{FIGURA}
 \renewcommand{\tableautorefname}{TABELA}
 
+\setlist[description]{font=\normalfont\textbullet\space}
 \input{00-pretextual}
 
 % ----------------------------------------------------------
