reduzir o espaço após as figuras
colocado o comando na linha 520:
\vspace{-15mm}

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -517,7 +517,7 @@
             { \par\hangindent=14mm LEGENDA: #7 }
         %\end{flushleft}
     \end{minipage}
-    \end{figure}
+    \end{figure}\vspace{-15mm}
  \end{center}
 }
 
