--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -50,7 +50,8 @@
 
 % Pacotes de citações BibLaTeX
 % ----------------------------------------------------------
-\usepackage[style=abnt,backref=true,repeatfields=true, backend=biber,citecounter=true,backrefstyle=three]{biblatex}
+\usepackage[style=abnt, citestyle=numeric, backref=true,backend=biber, citecounter=true, backrefstyle=three]{biblatex}
+%\usepackage[style=abnt,backref=true,repeatfields=true, backend=biber,citecounter=true,backrefstyle=three]{biblatex}
 
 
 \DefineBibliographyStrings{brazil}{%
