aumentado espaçamento entre as referencias
linha 50:
\setlength\bibitemsep{6mm}

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -52,7 +52,7 @@
 % ----------------------------------------------------------
 \usepackage[style=abnt, citestyle=numeric, backref=true,backend=biber, citecounter=true, backrefstyle=three]{biblatex}
 %\usepackage[style=abnt,backref=true,repeatfields=true, backend=biber,citecounter=true,backrefstyle=three]{biblatex}
-
+\setlength\bibitemsep{6mm}
 
 \DefineBibliographyStrings{brazil}{%
  backrefpage = {Citado \arabic{citecounter} vez na página},% originally "cited on page"
