Ajuste  pagenumber fontsize  of chapter first page
% Para ajustar o tamanho da fonte do número da primeira página do capítulo
\aliaspagestyle{chapter}{chapfirst}% customizing chapter pagestyle

--- a/main.tex
+++ b/main.tex
@@ -88,6 +88,9 @@
 \renewcommand{\figureautorefname}{FIGURA}
 \renewcommand{\tableautorefname}{TABELA}
 
+% Para ajustar o tamanho da fonte do número da primeira página do capítulo
+\aliaspagestyle{chapter}{chapfirst}% customizing chapter pagestyle
+
 \input{00-pretextual}
 
 % ----------------------------------------------------------
