--- a/main.tex
+++ b/main.tex
@@ -87,6 +87,7 @@
 \renewcommand{\figurename}{FIGURA }
 \renewcommand{\figureautorefname}{FIGURA}
 \renewcommand{\tableautorefname}{TABELA}
+\renewcommand{\equationautorefname}{EQUA\c{C}\~AO~}
 
 % Para ajustar o tamanho da fonte do número da primeira página do capítulo
 \aliaspagestyle{chapter}{chapfirst}% customizing chapter pagestyle
