Corrigindo o nome Isabel Gebauer Soares
Erro no nome da colaboradora:
Isabel Gebauer Soares

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -378,7 +378,7 @@
 
 \makeatother
 
-% Simbolos com a colaboração da Isabela Gebauer Soares 2020/02/24
+% Simbolos com a colaboração da Isabel Gebauer Soares 2020/02/24
 %----------------------------------------------------------------------------- 
 \makeatletter
 	\newcommand\criarsimbolo[2]{%
