Ajuste \ref{} de nomes de equações
Ajusta o nome para as referências que forem feitas no texto pelo comando \ref{}.

--- a/main.tex
+++ b/main.tex
@@ -87,6 +87,7 @@
 \renewcommand{\figurename}{FIGURA }
 \renewcommand{\figureautorefname}{FIGURA}
 \renewcommand{\tableautorefname}{TABELA}
+\renewcommand{\equationname}{EQUA\c{C}\~AO~}
 \renewcommand{\equationautorefname}{EQUA\c{C}\~AO~}
 
 % Para ajustar o tamanho da fonte do número da primeira página do capítulo
