pacote requerido suffix
para o comando criarsigla* ,  que coloca no texto

       descrição~(sigla)

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -42,6 +42,8 @@
 %----------------------------------------------------------------------------
 \RequirePackage[brazil]{babel}
 
+\RequirePackage{suffix} % para comando \criarsigla*
+
 % Fontes em Helvet - Arial
 %----------------------------------------------------------------------------
 \usepackage{helvet}
