--- a/UFPR.sty
+++ b/UFPR.sty
@@ -581,6 +581,38 @@
  \end{center}
 }
 
+% simplificação para colocar imagens
+% ----------------------------------------------------------
+\newsavebox{\myboxa}
+\newlength{\myboxlena}
+
+\newcommand{\imagem}[6]{
+	\begin{center}\small
+  	    \sbox{\myboxa}{#2}
+		\settowidth{\myboxlena}{\usebox{\myboxa}}
+		\noindent
+		\begin{figure}[!ht]
+			\centering
+			\caption{\uppercase{#1}}
+			#2
+			\label{fig:#4}
+			
+			%ajustado p/ a largura da imagem
+			\begin{minipage}{\myboxlena} \footnotesize
+				\vspace{2mm}
+				%\begin{flushleft}
+				\par FONTE:~#3
+				\ifthenelse{\equal{#5}{}}{}
+				{ \par\hangindent=14mm NOTA: #5 }
+				
+				\ifthenelse{\equal{#6}{}}{}
+				{ \par\hangindent=14mm LEGENDA: #6 }
+				%\end{flushleft}
+			\end{minipage}
+		\end{figure}
+	\end{center}
+}
+
 % simplificação para colocar figuras
 % ----------------------------------------------------------
 \newsavebox{\mybox}
