Quadro name na lista de quadros
\renewcommand{\cftfigpresnum}{QUADRO}

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -65,7 +65,7 @@
 
 % ----------------------------------------------------------
 \PrepareListOf{quadro}{%
-\renewcommand{\cftfigpresnum}{Quadro~}}
+\renewcommand{\cftfigpresnum}{QUADRO~}}
 
 \DeclareFloatingEnvironment[
 fileext=loq,
