Inserido lista de quadros
Colocada a lista de quadros antes da lista de tabelas.

--- a/00-pretextual.tex
+++ b/00-pretextual.tex
@@ -122,6 +122,13 @@
 \cleardoublepage
 }{}
 
+% inserir lista de quadros
+% ----------------------------------------------------------
+\ifthenelse{\equal{\terListaQuadros}{Sim}}{
+%\pdfbookmark[0]{\listtablename}{lot}
+\listofquadros*
+\cleardoublepage
+}{}
 
 % inserir lista de tabelas
 % ----------------------------------------------------------
