--- a/00-dados.tex
+++ b/00-dados.tex
@@ -51,6 +51,7 @@
  \providecommand{\terAgradecimentos}{Nao}
  \providecommand{\terErrata}{Nao}
  \providecommand{\terListaFiguras}{Sim}
+ \providecommand{\terListaQuadros}{Sim}
  \providecommand{\terListaTabelas}{Sim}
  \providecommand{\terSiglasAbrev}{Nao}
  \providecommand{\terResumos}{Nao}
@@ -63,7 +64,7 @@
 \titulo{Modelo de trabalho acadêmico com \abnTeX}
 \autor{Erika Angela}
 \local{Curitiba}
-\data{2017} %Apenas ano 4 dígitos
+\data{2020} %Apenas ano 4 dígitos
 
 % Orientador ou Orientadora
 \orientador{}
