part app e annex
comentados a indicação de parte para apêndices e anexos

--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
 % ------------------------------------------------------------------------
 % ------------------------------------------------------------------------
 %
-% DATA DE ATUALIZAÇÃO: 2020-05-24
+% DATA DE ATUALIZAÇÃO: 2020-06-10
 
 \documentclass[
         % -- opções da classe memoir --
@@ -164,7 +164,7 @@
 {\begin{apendicesenv}
 
 % Imprime uma página indicando o início dos apêndices
-\partapendices
+% \partapendices
 
    % Existem várias formas de se colocar anexos.
    % O exemplo abaixo coloca 2 apêndices denominados de 
@@ -200,7 +200,7 @@
 \begin{anexosenv}
 
 % --- Imprime uma página indicando o início dos anexos
- \partanexos
+% \partanexos
 
    % Existem várias formas de se colocar anexos.
    % O exemplo abaixo coloca 2 anexos denominados de 
