Redução espaço das REFERÊNCIAS no sumário
Ajustado o espaço vertical entre a parte textual e o título das REFERÊNCIAS no SUMÁRIO.

--- a/main.tex
+++ b/main.tex
@@ -144,6 +144,9 @@
 % ----------------------------------------------------------
 \postextual
 
+% Ajuste vertical do titulo de referencias no sumário
+% ----------------------------------------------------------
+\addtocontents{toc}{\vspace{-24pt}}
 
 % Referências bibliográficas
 % ----------------------------------------------------------
