Capítulos postextuais ajuste da posição
Ajuste vertical dos titulos dos capítulos postextuais após as REFERÊNCIAS

--- a/main.tex
+++ b/main.tex
@@ -155,6 +155,10 @@
 \printbibliography[heading=bay]
 % ----------------------------------------------------------
 
+% Ajuste vertical dos titulos dos capitulos postextuais
+% ----------------------------------------------------------
+\addtocontents{toc}{\vspace{-12pt}}
+
 % Glossário
 % ----------------------------------------------------------
 % Consulte o manual da classe abntex2 para orientações sobre o glossário.
